--- a/blog/source/_posts/我的第一篇技术博客.md
+++ b/blog/source/_posts/我的第一篇技术博客.md
@@ -7,7 +7,7 @@ tags:
   - 博客搭建
 categories: 
   - 技术分享
-cover: https://t.mwm.moe/pc
+cover: /img/covers/firstblog_cover.png
 description: 欢迎来到我的技术博客，这里分享前端开发经验和学习心得
 ---
 
