--- a/blog/source/_posts/天地-巧合-与-因子-的技术感悟.md
+++ b/blog/source/_posts/天地-巧合-与-因子-的技术感悟.md
@@ -1,5 +1,6 @@
 ---
 title: "天地「巧合」与「因子」的技术感悟"
+slug: philosophy-of-coincidence-and-factors
 date: 2025-04-25 14:05:07
 author: Leion Charrrrls
 cover: "https://vcg02.cfp.cn/creative/vcg/nowater800/new/VCG41N1637699727.jpg?x-oss-process=image/format,webp"
